# ticktrack

./: .dockerignore  .env.template  .gitignore  README.md  dev.docker-compose.yaml  dev.env  docker-compose.yaml  index.html  package.json  pnpm-lock.yaml  pyproject.toml
api/: auth.py  exception.py  models.py  renderers.py  serializers.py  urls.py  views.py
api/migrations/: 0002_board_ticket.py  0005_rename_name_board_title.py  0008_alter_ticket_status.py  0010_alter_ticket_options.py  0011_remove_board_description.py
api/tests/: test_ticket_endpoints.py
backend/: .dockerignore  Dockerfile  conftest.py  manage.py  pyproject.toml  pytest.ini
backend/api/: auth.py  exception.py  models.py  renderers.py  serializers.py  urls.py  utils.py  views.py
backend/tickettracker/: settings.py  wsgi.py
frontend/: Dockerfile  README.md  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.vue  endpoints.js  main.js
nginx/: Dockerfile  nginx.conf
scripts/: certbot-renew.sh  cleanup.sh
src/: App.vue  api.js  endpoints.js  main.js
src/assets/: main.css
src/components/: AuthFields.vue  BaseField.vue  BaseForm.vue  BaseList.vue  CustomField.vue  LoginForm.vue  LogoutButton.vue  PasswordResetForm.vue
src/composables/: useBackendErrors.js  useDropdown.js  useEntityForm.js  useFormSubmit.js  useTicketStatusList.js
src/layouts/: AppLayout.vue  AuthLayout.vue
src/router/: index.js
src/stores/: auth.js  board.js  ticket.js
src/utils/: request.js  validationRules.js
src/views/: BoardDetailView.vue  (+7 more)
tickettracker/: asgi.py  settings.py  urls.py
(+72 files in other folders)
