[project]
name = "tickettracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.8",
    "django-allauth[headless]>=65.13.1",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "model-bakery>=1.20.5",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
]
